fixing markup and paths, cleaning whitespace (please use tabs)

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -11,8 +11,8 @@
 	<link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	
 	<link href="/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<!-- 	<link href="/assets/css/lobbyradar.css" rel="stylesheet" type="text/css">
- -->
+	<!-- <link href="/assets/css/lobbyradar.css" rel="stylesheet" type="text/css"> -->
+	
 	<!-- js -->
 	<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
