first network test

--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -79,6 +79,8 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
+						<div id="networkviz">
+						</div>
 						<h1>Wer macht was, und vor allem wann und mit wem?</h1>
 						<p class="lead">
 							Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus mollis interdum.
