--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -15,9 +15,12 @@
 	
 	<!-- js -->
 	<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/js/d3.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
+	<script type="text/javascript" src="/assets/js/networkviz.js"></script>
+	<script type="text/javascript" src="/assets/js/networkdata.js"></script>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
