--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -1,6 +1,7 @@
 {{>header}}
 {{>navigation}}
 <div class="fullscreen">
+
 	<div class="container" id="main">
 		{{#list}}
 		<div class="row">
@@ -55,7 +56,7 @@
 								<th>Verbindungen</th>
 							</tr>
 						</thead>
-						<!--
+						
 						<tbody>
 							{{#item}}
 							<tr>
@@ -64,10 +65,15 @@
 							</tr>
 							{{/item}}
 						</tbody>
-						-->
+					
 					</table>
 				</div>
 			</div>
+
+			<div id="networkviz-wrapper">
+				<div id="networkviz"></div>
+			</div>
+
 		</div>
 		{{/list}}
 		<div class="overlay">
@@ -79,8 +85,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div id="networkviz">
-						</div>
+		
 						<h1>Wer macht was, und vor allem wann und mit wem?</h1>
 						<p class="lead">
 							Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus mollis interdum.
