include font awesome again

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -10,7 +10,7 @@
 	<!-- css -->
 	<link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	
-	<link href="/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="/assets/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<!-- <link href="/assets/css/lobbyradar.css" rel="stylesheet" type="text/css"> -->
 	
 	<!-- js -->
