--- a/assets/views/navigation.mustache
+++ b/assets/views/navigation.mustache
@@ -1,10 +1,10 @@
 <div class="zdf-header-grey">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<img class="zdf-logo" src="/assets/images/ZDF-logo-45x26.svg" onerror="this.src='/assets/images/ZDF-logo-45x26.png';this.onerror=null;" alt="ZDF" width="45" height="26">
+			<div class="col-md-3 col-xs-1">
+				<img class="zdf-logo img-responsive" src="/assets/images/ZDF-logo-45x26.svg" onerror="this.src='/assets/images/ZDF-logo-45x26.png';this.onerror=null;" alt="ZDF" >
 			</div>
-			<div class="col-md-7 col-md-offset-2">
+			<div class="col-md-7 col-md-offset-2 col-xs-11">
 				<div class="mini-nav">
 					<a href="">Browser-Extension installieren!</a> 
 					<a href="" class="hamburger"><i class="fa fa-bars"></i></a>
@@ -17,17 +17,17 @@
 <div class="zdf-header-blue">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 col-sm-12">
+			<div class="col-sm-3 col-xs-12">
 				<a class="navbar-brand" href="#">    
 					<span class="fa-stack fa-lg">
 						<i class="fa fa-bullseye fa-5x"></i>
 						<i class="fa fa-suitcase fa-stack-1x symbol"></i>
 					</span>             
-					<div class="logo-name">Lobby<strong>radar</strong></div>
+							<img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
 				</a>
 			</div>
-			<div class="col-md-6 col-md-offset-3 col-sm-12">
-				<form class="" role="form">
+			<div class="col-sm-6 col-sm-offset-3 col-xs-12">
+				<form class="search-form" role="form">
 					<div class="input-group">
 						<input type="text" placeholder="Suchen Sie nach Politikern, Firmen und Journalisten" class="lobbysearch form-control">
 						<span class="input-group-btn">
